[package]
name = "knb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
crossterm = "0.27.0"
ctrlc = "3.4.1"
dirs ="5"
flexi_logger = "0.26"
log = "0.4"
owo-colors = "3.5"
ratatui = "0.26.2"
